--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-button-spinner": "^2.2.1",
     "vue-mq": "^0.2.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
